# src/Application/DTO/BetPlaceDTO.php
@@ -3,92 +3,76 @@
 declare(strict_types=1);
 
 namespace App\Application\DTO;
+
 use Symfony\Component\Validator\Constraints as Assert;
 
 readonly class BetPlaceDTO
 {
+    /**
+     * @param string[]|null $outcomes
+     * @param string[]|null $bonuses
+     */
     public function __construct(
-        #[Assert\Type(type: 'string')]
-        #[Assert\NotNull]
         #[Assert\Regex(pattern: '/^[0-9]+$/', message: 'BetId should contain only digits')]
         public string $betId,
 
-        #[Assert\Type(type: 'string')]
-        #[Assert\NotNull]
+        #[Assert\Regex(pattern: '/^[0-9]+$/', message: 'ClientId should contain only digits')]
         public string $clientId,
 
-        #[Assert\Type(type: 'string')]
-        #[Assert\NotNull]
-        public ?string $transactionId,
+        #[Assert\Regex(pattern: '/^[0-9]+$/', message: 'TransactionId should contain only digits')]
+        public string $transactionId,
 
-        #[Assert\Type(type: 'integer')]
-        #[Assert\NotNull]
         #[Assert\PositiveOrZero]
-        public ?int $transactionAmount,
+        public float $transactionAmount,
 
-        #[Assert\Type(type: 'string')]
-        #[Assert\NotNull]
-        #[Assert\Choice(choices: ['SINGLE', 'MULTIPLE', 'SYSTEM'], message: 'Invalid betType value')]
+        #[Assert\Choice(choices: ['SINGLE'], message: 'Invalid bet type')]
         public string $betType,
 
-        #[Assert\Type(type: 'string')]
-        #[Assert\NotNull]
-        #[Assert\Choice(choices: ['INSTANT', 'ORDER'], message: 'Invalid betTransactionType value')]
+        #[Assert\Choice(choices: ['INSTANT'], message: 'Invalid bet transaction type')]
         public string $betTransactionType,
 
-        #[Assert\Type(type: 'string')]
-        #[Assert\NotNull]
-        #[Assert\Choice(choices: ['YES', 'UP', 'NO', 'DOWN'], message: 'Invalid acceptOddsChanges value')]
+        #[Assert\Choice(choices: ['UP', 'DOWN', 'NONE'], message: 'Invalid odds change type')]
         public string $acceptOddsChanges,
 
-        #[Assert\Type(type: 'string')]
-        #[Assert\NotNull]
-        #[Assert\Choice(choices: ['YES', 'UP', 'NO'], message: 'Invalid acceptParameterChanges value')]
-        public ?string $acceptParameterChanges,
+        #[Assert\Choice(choices: ['YES', 'NO'], message: 'Invalid parameter change type')]
+        public string $acceptParameterChanges,
 
-        #[Assert\Type(type: 'float')]
-        #[Assert\NotNull]
         #[Assert\PositiveOrZero]
-        public ?float $odds,
+        public float $odds,
 
-        #[Assert\Type(type: 'float')]
-        #[Assert\NotNull]
         #[Assert\PositiveOrZero]
-        public ?float $betOdds,
+        public float $betOdds,
 
-        #[Assert\Type(type: 'string')]
-        #[Assert\NotNull]
-        #[Assert\Choice(choices: [
-            'UNSETTLED',
-            'WIN',
-            'LOSE',
-            'CANCELLED',
-            'VOID',
-            'CASH_OUT'
-        ], message: 'Invalid betStatus value')]
+        #[Assert\Choice(choices: ['WIN', 'LOSE', 'VOID'], message: 'Invalid bet status')]
         public string $betStatus,
 
-        #[Assert\Type(type: 'string')]
         public ?string $prematchFinCategoryName,
 
-        #[Assert\Type(type: 'string')]
         public ?string $prematchGameStyleCategoryName,
 
-        #[Assert\Type(type: 'string')]
         public ?string $liveFinCategoryName,
 
-        #[Assert\Type(type: 'string')]
         public ?string $liveGameStyleCategoryName,
 
-        #[Assert\Type(type: 'integer')]
-        #[Assert\NotNull]
-        #[Assert\PositiveOrZero]
-        public ?int $settleTime,
+        public int $settleTime,
 
-        #[Assert\Type(type: 'integer')]
-        #[Assert\NotNull]
-        #[Assert\PositiveOrZero]
-        public ?int $createTime,
+        public int $createTime,
+
+        public int $updateTime,
+
+        public BetPlaceMoneyDTO $betMoney,
+
+        public string $cashOutReason,
+
+        public string $locale,
+
+        public string $betSportService,
+
+        public int $winCombinationSize,
+
+        public ?array $outcomes,
+
+        public ?array $bonuses,
     ) {
     }
 }
